--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,8 +8,17 @@
 }
 
 .container {
-  @apply
-    m-auto
+  @apply m-auto;
+}
+
+@layer components {
+  .footer-items {
+    @apply text-base leading-4 mt-6 text-graylight cursor-pointer hover:text-white;
+  }
+}
+
+html, body, #root {
+  height: 100%;
 }
 
 
@@ -37,6 +46,7 @@
   grid-template-columns: 3fr 1fr 1fr 1fr;
   column-gap: 0.5rem;
 }
+
 .cart-item {
   border-top: 1px solid rgb(187, 187, 187);
   padding: 1rem 0;
@@ -55,6 +65,7 @@
   width: 100px;
   max-width: 100%;
   margin-right: 1rem;
+  object-fit: cover;
 }
 .cart-item .cart-product h3 {
   font-weight: 400;
@@ -189,6 +200,191 @@
     flex-direction: column;
   }
   .cart-summary .clear-btn {
+    margin-bottom: 2rem;
+  }
+}
+
+
+
+
+/* wishlist */
+.wishlist-container {
+  padding: 2rem 4rem;
+}
+.wishlist-container h2 {
+  font-weight: 400;
+  font-size: 30px;
+  text-align: center;
+}
+.wishlist-container .titles {
+  margin: 2rem 0 1rem 0;
+}
+.wishlist-container .titles h3 {
+  font-size: 14px;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+.wishlist-item,
+.wishlist-container .titles {
+  display: grid;
+  align-items: center;
+  grid-template-columns: 3fr 1fr 1fr;
+  column-gap: 0.5rem;
+}
+
+.wishlist-item {
+  border-top: 1px solid rgb(187, 187, 187);
+  padding: 1rem 0;
+}
+.wishlist-container .titles .product-title {
+  padding-left: 0.5rem;
+}
+.wishlist-container .titles .total {
+  padding-right: 0.5rem;
+  justify-self: right;
+}
+.wishlist-item .wishlist-product {
+  display: flex;
+}
+.wishlist-item .wishlist-product img {
+  width: 100px;
+  max-width: 100%;
+  margin-right: 1rem;
+  object-fit: cover;
+}
+.wishlist-item .wishlist-product h3 {
+  font-weight: 400;
+}
+.wishlist-item .wishlist-product button {
+  border: none;
+  outline: none;
+  margin-top: 0.7rem;
+  cursor: pointer;
+  background: none;
+  color: gray;
+}
+.wishlist-item .wishlist-product button:hover {
+  color: black;
+}
+
+.wishlist-item .wishlist-product-quantity {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  width: 130px;
+  max-width: 100%;
+  border: 0.5px solid rgb(177, 177, 177);
+  border-radius: 5px;
+}
+.wishlist-item .wishlist-product-quantity button {
+  border: none;
+  outline: none;
+  background: none;
+  padding: 0.7rem 1.5rem;
+  cursor: pointer;
+}
+.wishlist-item .wishlist-product-quantity .count {
+  padding: 0.7rem 0;
+}
+.wishlist-item .wishlist-product-total-price {
+  padding-right: 0.5rem;
+  justify-self: right;
+  font-weight: 700;
+}
+
+/* wishlist summary */
+.wishlist-summary {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  border-top: 1px solid rgb(187, 187, 187);
+  padding-top: 2rem;
+}
+.wishlist-summary .clear-btn {
+  width: 130px;
+  height: 40px;
+  border-radius: 5px;
+  font-weight: 400;
+  letter-spacing: 1.15px;
+  border: 0.5px solid rgb(177, 177, 177);
+  color: gray;
+  background: none;
+  outline: none;
+  cursor: pointer;
+}
+.wishlist-checkout {
+  width: 270px;
+  max-width: 100%;
+}
+.wishlist-checkout .subtotal {
+  display: flex;
+  justify-content: space-between;
+  font-size: 20px;
+}
+.wishlist-checkout .amount {
+  font-weight: 700;
+}
+.wishlist-checkout p {
+  font-size: 14px;
+  font-weight: 200;
+  margin: 0.5rem 0;
+}
+.wishlist-checkout button {
+  width: 100%;
+  height: 40px;
+  border-radius: 5px;
+  font-weight: 400;
+  letter-spacing: 1.15px;
+  background-color: #4b70e2;
+  color: #f9f9f9;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+.continue-shopping,
+.start-shopping {
+  margin-top: 1rem;
+}
+.continue-shopping a,
+.start-shopping a {
+  color: gray;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+}
+.continue-shopping a span,
+.start-shopping a span {
+  margin-left: 0.5rem;
+}
+.wishlist-empty {
+  font-size: 20px;
+  margin-top: 2rem;
+  color: rgb(84, 84, 84);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+@media (max-width: 665px) {
+  /* wishlist */
+  .wishlist-container {
+    padding: 2rem;
+  }
+  .wishlist-container .titles {
+    display: none;
+  }
+  .wishlist-item,
+  .wishlist-container .titles {
+    grid-template-columns: 1fr;
+    row-gap: 1rem;
+  }
+  .wishlist-item .wishlist-product-total-price {
+    justify-self: left;
+  }
+  .wishlist-summary {
+    flex-direction: column;
+  }
+  .wishlist-summary .clear-btn {
     margin-bottom: 2rem;
   }
 }
